{
    "name": "KeyboardActions",
    "maps": [
        {
            "name": "Player",
            "id": "0405b30a-a147-4c9b-9eb2-9e6ed8aaad45",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "991a0ee0-6ad6-4443-a07a-e773ea549878",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4bdec5af-d717-4cf4-ba99-ac2409cd4969",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "wasd",
                    "id": "c241027b-4cce-44d3-98f1-aece7822790a",
                    "path": "2DVector",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c98cf726-881f-4115-bee9-c247fbaf865f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9b34db8e-fa6c-41b6-933d-2295431556e1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2e47290a-7ca9-4b2c-b937-b6794b120881",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "992fef57-7d9a-44c0-bf56-2663fe722fa4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "29d294a4-dacf-48cb-9ee3-b46170b01fa8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameState",
            "id": "c98ec19c-92d8-44bb-a503-4f984a52f709",
            "actions": [
                {
                    "name": "PauseResume",
                    "type": "Button",
                    "id": "b5d7db46-21ea-48c1-88cc-9efb8607f2d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b31ca0f6-40e0-4e06-84d7-80f1b2507daf",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseResume",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}